--- a/assetTracker.html
+++ b/assetTracker.html
@@ -160,6 +160,10 @@
       margin: 3rem 0;
     }
 
+    .footer-section:last-child {
+      text-align: right;
+    }
+
     .factory-title {
       font-size: 1.3rem;
       font-weight: 600;
