--- a/contact.html
+++ b/contact.html
@@ -289,6 +289,9 @@
       color: var(--white);
     }
 
+    .footer-section:last-child {
+      text-align: right;
+    }
     .footer-bottom {
       text-align: center;
       margin-top: 2rem;
