--- a/employeeTracker.html
+++ b/employeeTracker.html
@@ -317,6 +317,10 @@
       color: var(--white);
     }
 
+    .footer-section a:hover {
+      color: var(--white);
+    }
+
     .footer-bottom {
       text-align: center;
       margin-top: 2rem;
