--- a/forkliftTracker.html
+++ b/forkliftTracker.html
@@ -309,6 +309,10 @@
     .footer-section a:hover {
       color: var(--white);
     }
+    
+    .footer-content:last-child {
+      text-align: right;
+    }
 
     .footer-bottom {
       text-align: center;
