--- a/idCardUWBTracker.html
+++ b/idCardUWBTracker.html
@@ -160,6 +160,14 @@
       margin: 3rem 0;
     }
 
+    .footer-section a:hover {
+      color: var(--white);
+    }
+
+    .footer-section:last-child {
+      text-align: right;
+    }
+
     .factory-title {
       font-size: 1.3rem;
       font-weight: 600;
