--- a/products.html
+++ b/products.html
@@ -246,6 +246,10 @@
       color: var(--white);
     }
 
+    .footer-section:last-child {
+      text-align: right;
+    }
+
     .footer-bottom {
       text-align: center;
       margin-top: 2rem;
@@ -261,8 +265,8 @@
       <a href="#" class="logo">CREUF</a>
       <nav>
         <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="products.html" class="active">UWB Technology</a>
+        <a href="products.html" class="active">Products</a>
+        <a href="index.html#technology">UWB Technology</a>
         <a href="contact.html">Contact Us</a>
       </nav>
     </header>
@@ -275,7 +279,7 @@
       </div>
 
       <div class="products-grid">
-        <!-- Product 1: Employee Tracking System -->
+       
         <div class="product-card">
           <div class="product-image">
             <img src="assets/personTracker.png" alt="UWB Person Tracker">
@@ -287,7 +291,6 @@
           </div>
         </div>
 
-        <!-- Product 2: Forklift Tracking Solution -->
         <div class="product-card">
           <div class="product-image">
             <img src="assets/idCard.png" alt="ID Card Sized UWB Tracker">
@@ -299,7 +302,7 @@
           </div>
         </div>
 
-        <!-- Product 3: ATEX Certified Ex-Proof Tracker -->
+        
         <div class="product-card">
           <div class="product-image">
             <img src="assets/assetTracker.png" alt="UWB Indoor Asset Trackers">
@@ -311,7 +314,7 @@
           </div>
         </div>
 
-        <!-- Product 4: UWB Positioning System -->
+  
         <div class="product-card">
           <div class="product-image">
             <img src="assets/frokliftTerminal.png" alt="Forklift Operator Terminal">
