--- a/index.html
+++ b/index.html
@@ -458,6 +458,11 @@
       color: var(--white);
     }
 
+    .footer-section:last-child {
+      text-align: right;
+    }
+
+
     .footer-bottom {
       text-align: center;
       margin-top: 2rem;
